[package]
name = "wfc-rs"
version = "0.5.0"
authors = ["Noah Ryan <nsmryan@gmail.com>"]
edition = "2018"
license="MIT"
build="build.rs"
links="wfc"
keywords=["wfc", "c", "ffi"]
description="Binding to the krychu/wfc C library"
readme="README.md"
homepage="https://github.com/nsmryan/wfc-rs"

[dependencies]
libc="0.2"

[build-dependencies]
cc="1.0"

